--- a/OsuBeatmapParser.csproj
+++ b/OsuBeatmapParser.csproj
@@ -44,9 +44,12 @@
     <Compile Include="Beatmap.cs" />
     <Compile Include="Enums\CurveType.cs" />
     <Compile Include="Enums\HitSoundType.cs" />
+    <Compile Include="Enums\LoopType.cs" />
     <Compile Include="Enums\Ruleset.cs" />
     <Compile Include="Enums\SampleSet.cs" />
     <Compile Include="Enums\Sections.cs" />
+    <Compile Include="Enums\StoryboardLayer.cs" />
+    <Compile Include="Enums\StoryboardOrigin.cs" />
     <Compile Include="Enums\TaikoColor.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="Helpers\ParseHelper.cs" />
@@ -72,6 +75,12 @@
     <Compile Include="Sections\DifficultySection.cs" />
     <Compile Include="Sections\EditorSection.cs" />
     <Compile Include="Sections\EventsSection.cs" />
+    <Compile Include="Sections\Events\BreakEvent.cs" />
+    <Compile Include="Sections\Events\Storyboard\Storyboard.cs" />
+    <Compile Include="Sections\Events\Storyboard\StoryboardAnimation.cs" />
+    <Compile Include="Sections\Events\Storyboard\StoryboardObject.cs" />
+    <Compile Include="Sections\Events\Storyboard\StoryboardSample.cs" />
+    <Compile Include="Sections\Events\Storyboard\StoryboardSprite.cs" />
     <Compile Include="Sections\GeneralSection.cs" />
     <Compile Include="Sections\MetadataSection.cs" />
   </ItemGroup>
