--- a/OsuBeatmapParser.csproj
+++ b/OsuBeatmapParser.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Beatmap.cs" />
     <Compile Include="Enums\CurveType.cs" />
     <Compile Include="Enums\Easing.cs" />
+    <Compile Include="Enums\HitObjectType.cs" />
     <Compile Include="Enums\HitSoundType.cs" />
     <Compile Include="Enums\LoopType.cs" />
     <Compile Include="Enums\Ruleset.cs" />
