--- a/OsuBeatmapParser/OsuBeatmapParser.csproj
+++ b/OsuBeatmapParser/OsuBeatmapParser.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Beatmap.cs" />
     <Compile Include="Enums\CurveType.cs" />
     <Compile Include="Enums\Easing.cs" />
+    <Compile Include="Enums\EventType.cs" />
     <Compile Include="Enums\HitObjectType.cs" />
     <Compile Include="Enums\HitSoundType.cs" />
     <Compile Include="Enums\LoopType.cs" />
@@ -81,6 +82,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sections\DifficultySection.cs" />
     <Compile Include="Sections\EditorSection.cs" />
+    <Compile Include="Sections\EventsSection.cs" />
+    <Compile Include="Sections\Events\BreakEvent.cs" />
     <Compile Include="Sections\GeneralSection.cs" />
     <Compile Include="Sections\MetadataSection.cs" />
   </ItemGroup>
