--- a/OsuBeatmapParser/OsuBeatmapParser.csproj
+++ b/OsuBeatmapParser/OsuBeatmapParser.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beatmap.cs" />
+    <Compile Include="Beatmaps\Beatmap.cs" />
     <Compile Include="Decoders\BeatmapDecoder.cs" />
     <Compile Include="Decoders\StoryboardDecoder.cs" />
     <Compile Include="Enums\BlendingMode.cs" />
@@ -65,32 +65,32 @@
     <Compile Include="Enums\TimeSignature.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="Helpers\ParseHelper.cs" />
-    <Compile Include="Objects\Catch\CatchHitCircle.cs" />
-    <Compile Include="Objects\Catch\CatchSpinner.cs" />
-    <Compile Include="Objects\Catch\CatchHitObject.cs" />
-    <Compile Include="Objects\Catch\CatchSlider.cs" />
-    <Compile Include="Objects\HitObject.cs" />
-    <Compile Include="Objects\Mania\ManiaHitObject.cs" />
-    <Compile Include="Objects\Mania\ManiaHold.cs" />
-    <Compile Include="Objects\Mania\ManiaSingle.cs" />
-    <Compile Include="Objects\Standard\StandardHitCircle.cs" />
-    <Compile Include="Objects\Standard\StandardHitObject.cs" />
-    <Compile Include="Objects\Standard\StandardSlider.cs" />
-    <Compile Include="Objects\Standard\StandardSpinner.cs" />
-    <Compile Include="Objects\Taiko\TaikoDrumroll.cs" />
-    <Compile Include="Objects\Taiko\TaikoHitCircle.cs" />
-    <Compile Include="Objects\Taiko\TaikoHitObject.cs" />
-    <Compile Include="Objects\Taiko\TaikoSpinner.cs" />
-    <Compile Include="Objects\TimingPoint.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchHitCircle.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchSpinner.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchHitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchSlider.cs" />
+    <Compile Include="Beatmaps\Objects\HitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Mania\ManiaHitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Mania\ManiaHold.cs" />
+    <Compile Include="Beatmaps\Objects\Mania\ManiaSingle.cs" />
+    <Compile Include="Beatmaps\Objects\Standard\StandardHitCircle.cs" />
+    <Compile Include="Beatmaps\Objects\Standard\StandardHitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Standard\StandardSlider.cs" />
+    <Compile Include="Beatmaps\Objects\Standard\StandardSpinner.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoDrumroll.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoHitCircle.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoHitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoSpinner.cs" />
+    <Compile Include="Beatmaps\Objects\TimingPoint.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sections\DifficultySection.cs" />
-    <Compile Include="Sections\EditorSection.cs" />
-    <Compile Include="Sections\EventsSection.cs" />
-    <Compile Include="Sections\Events\BreakEvent.cs" />
-    <Compile Include="Sections\GeneralSection.cs" />
-    <Compile Include="Sections\MetadataSection.cs" />
+    <Compile Include="Beatmaps\Sections\DifficultySection.cs" />
+    <Compile Include="Beatmaps\Sections\EditorSection.cs" />
+    <Compile Include="Beatmaps\Sections\EventsSection.cs" />
+    <Compile Include="Beatmaps\Sections\Events\BreakEvent.cs" />
+    <Compile Include="Beatmaps\Sections\GeneralSection.cs" />
+    <Compile Include="Beatmaps\Sections\MetadataSection.cs" />
     <Compile Include="Storyboards\Commands\Command.cs" />
     <Compile Include="Storyboards\Commands\CommandGroup.cs" />
     <Compile Include="Storyboards\Commands\LoopCommand.cs" />
