Implement replay parser

--- a/OsuBeatmapParser/OsuBeatmapParser.csproj
+++ b/OsuBeatmapParser/OsuBeatmapParser.csproj
@@ -56,6 +56,28 @@
     <Compile Include="Database\OsuDatabase.cs" />
     <Compile Include="Database\PresenceDatabase.cs" />
     <Compile Include="Database\ScoresDatabase.cs" />
+    <Compile Include="Decoders\ReplayDecoder.cs" />
+    <Compile Include="Enums\CatchKeys.cs" />
+    <Compile Include="Enums\ManiaKeys.cs" />
+    <Compile Include="Enums\StandardKeys.cs" />
+    <Compile Include="Enums\TaikoKeys.cs" />
+    <Compile Include="Replays\Objects\LifeFrame.cs" />
+    <Compile Include="Replays\Objects\ReplayFrame.cs" />
+    <Compile Include="Replays\Replay.cs" />
+    <Compile Include="Replays\SevenZip\Common\CRC.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaBase.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaDecoder.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaEncoder.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZ\IMatchFinder.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZ\LzBinTree.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZ\LzInWindow.cs" />
+    <Compile Include="Replays\SevenZip\Compress\LZ\LzOutWindow.cs" />
+    <Compile Include="Replays\SevenZip\Compress\RangeCoder\Decoder.cs" />
+    <Compile Include="Replays\SevenZip\Compress\RangeCoder\Encoder.cs" />
+    <Compile Include="Replays\SevenZip\Compress\RangeCoder\RangeCoderBit.cs" />
+    <Compile Include="Replays\SevenZip\Compress\RangeCoder\RangeCoderBitTree.cs" />
+    <Compile Include="Replays\SevenZip\ICoder.cs" />
+    <Compile Include="Replays\SevenZip\LZMAHelper.cs" />
     <Compile Include="Serialization\ObjType.cs" />
     <Compile Include="Serialization\SerializationReader.cs" />
     <Compile Include="Decoders\BeatmapDecoder.cs" />
