--- a/OsuParsers/OsuParsers.csproj
+++ b/OsuParsers/OsuParsers.csproj
@@ -47,7 +47,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beatmaps\Beatmap.cs" />
-    <Compile Include="Beatmaps\Objects\HitObjectExtras.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchDroplets.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchFruit.cs" />
+    <Compile Include="Beatmaps\Objects\Catch\CatchSpinner.cs" />
+    <Compile Include="Beatmaps\Objects\Circle.cs" />
+    <Compile Include="Beatmaps\Objects\Extras.cs" />
+    <Compile Include="Beatmaps\Objects\HitObject.cs" />
+    <Compile Include="Beatmaps\Objects\Mania\ManiaHit.cs" />
+    <Compile Include="Beatmaps\Objects\Mania\ManiaHold.cs" />
+    <Compile Include="Beatmaps\Objects\Slider.cs" />
+    <Compile Include="Beatmaps\Objects\Spinner.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoDrumroll.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoHit.cs" />
+    <Compile Include="Beatmaps\Objects\Taiko\TaikoSpinner.cs" />
+    <Compile Include="Beatmaps\Objects\TimingPoint.cs" />
     <Compile Include="Database\CollectionDatabase.cs" />
     <Compile Include="Database\Objects\Collection.cs" />
     <Compile Include="Database\Objects\DbBeatmap.cs" />
@@ -106,23 +119,6 @@
     <Compile Include="Enums\TimeSignature.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="Helpers\ParseHelper.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchHitCircle.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchSpinner.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchHitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchSlider.cs" />
-    <Compile Include="Beatmaps\Objects\HitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Mania\ManiaHitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Mania\ManiaHold.cs" />
-    <Compile Include="Beatmaps\Objects\Mania\ManiaSingle.cs" />
-    <Compile Include="Beatmaps\Objects\Standard\StandardHitCircle.cs" />
-    <Compile Include="Beatmaps\Objects\Standard\StandardHitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Standard\StandardSlider.cs" />
-    <Compile Include="Beatmaps\Objects\Standard\StandardSpinner.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoDrumroll.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoHitCircle.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoHitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoSpinner.cs" />
-    <Compile Include="Beatmaps\Objects\TimingPoint.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Beatmaps\Sections\DifficultySection.cs" />
