--- a/OsuParsers/OsuParsers.csproj
+++ b/OsuParsers/OsuParsers.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Enums\StandardKeys.cs" />
     <Compile Include="Enums\TaikoKeys.cs" />
     <Compile Include="Helpers\FormatHelper.cs" />
+    <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="Replays\Objects\LifeFrame.cs" />
     <Compile Include="Replays\Objects\ReplayFrame.cs" />
     <Compile Include="Replays\Replay.cs" />
