Implement Database Writer

--- a/OsuParsers/OsuParsers.csproj
+++ b/OsuParsers/OsuParsers.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Storyboards\Objects\StoryboardSprite.cs" />
     <Compile Include="Storyboards\Storyboard.cs" />
     <Compile Include="Writers\BeatmapWriter.cs" />
+    <Compile Include="Writers\DatabaseWriter.cs" />
     <Compile Include="Writers\ReplayWriter.cs" />
     <Compile Include="Writers\StoryboardWriter.cs" />
   </ItemGroup>
