--- a/OsuParsers/OsuParsers.csproj
+++ b/OsuParsers/OsuParsers.csproj
@@ -1,149 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84C32A7C-78DD-4DB5-A9F5-1AD7083F9C8C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OsuParsers</RootNamespace>
-    <AssemblyName>OsuParsers</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>net45;net461;netstandard2.0</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.5.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Beatmaps\Beatmap.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchDroplets.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchFruit.cs" />
-    <Compile Include="Beatmaps\Objects\Catch\CatchSpinner.cs" />
-    <Compile Include="Beatmaps\Objects\Circle.cs" />
-    <Compile Include="Beatmaps\Objects\Extras.cs" />
-    <Compile Include="Beatmaps\Objects\HitObject.cs" />
-    <Compile Include="Beatmaps\Objects\Mania\ManiaHit.cs" />
-    <Compile Include="Beatmaps\Objects\Mania\ManiaHold.cs" />
-    <Compile Include="Beatmaps\Objects\Slider.cs" />
-    <Compile Include="Beatmaps\Objects\Spinner.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoDrumroll.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoHit.cs" />
-    <Compile Include="Beatmaps\Objects\Taiko\TaikoSpinner.cs" />
-    <Compile Include="Beatmaps\Objects\TimingPoint.cs" />
-    <Compile Include="Database\CollectionDatabase.cs" />
-    <Compile Include="Database\Objects\Collection.cs" />
-    <Compile Include="Database\Objects\DbBeatmap.cs" />
-    <Compile Include="Database\Objects\DbTimingPoint.cs" />
-    <Compile Include="Database\Objects\Player.cs" />
-    <Compile Include="Database\Objects\Score.cs" />
-    <Compile Include="Database\OsuDatabase.cs" />
-    <Compile Include="Database\PresenceDatabase.cs" />
-    <Compile Include="Database\ScoresDatabase.cs" />
-    <Compile Include="Decoders\ReplayDecoder.cs" />
-    <Compile Include="Enums\CatchKeys.cs" />
-    <Compile Include="Enums\CommandType.cs" />
-    <Compile Include="Enums\ManiaKeys.cs" />
-    <Compile Include="Enums\StandardKeys.cs" />
-    <Compile Include="Enums\TaikoKeys.cs" />
-    <Compile Include="Helpers\FormatHelper.cs" />
-    <Compile Include="Helpers\MathHelper.cs" />
-    <Compile Include="Replays\Objects\LifeFrame.cs" />
-    <Compile Include="Replays\Objects\ReplayFrame.cs" />
-    <Compile Include="Replays\Replay.cs" />
-    <Compile Include="Replays\SevenZip\Common\CRC.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaBase.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaDecoder.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZMA\LzmaEncoder.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZ\IMatchFinder.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZ\LzBinTree.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZ\LzInWindow.cs" />
-    <Compile Include="Replays\SevenZip\Compress\LZ\LzOutWindow.cs" />
-    <Compile Include="Replays\SevenZip\Compress\RangeCoder\Decoder.cs" />
-    <Compile Include="Replays\SevenZip\Compress\RangeCoder\Encoder.cs" />
-    <Compile Include="Replays\SevenZip\Compress\RangeCoder\RangeCoderBit.cs" />
-    <Compile Include="Replays\SevenZip\Compress\RangeCoder\RangeCoderBitTree.cs" />
-    <Compile Include="Replays\SevenZip\ICoder.cs" />
-    <Compile Include="Replays\SevenZip\LZMAHelper.cs" />
-    <Compile Include="Serialization\ObjType.cs" />
-    <Compile Include="Serialization\SerializationReader.cs" />
-    <Compile Include="Decoders\BeatmapDecoder.cs" />
-    <Compile Include="Decoders\DatabaseDecoder.cs" />
-    <Compile Include="Decoders\StoryboardDecoder.cs" />
-    <Compile Include="Enums\BlendingMode.cs" />
-    <Compile Include="Enums\CurveType.cs" />
-    <Compile Include="Enums\Easing.cs" />
-    <Compile Include="Enums\EventType.cs" />
-    <Compile Include="Enums\Grade.cs" />
-    <Compile Include="Enums\HitObjectType.cs" />
-    <Compile Include="Enums\HitSoundType.cs" />
-    <Compile Include="Enums\LoopType.cs" />
-    <Compile Include="Enums\Mods.cs" />
-    <Compile Include="Enums\Origins.cs" />
-    <Compile Include="Enums\Permissions.cs" />
-    <Compile Include="Enums\RankedStatus.cs" />
-    <Compile Include="Enums\Ruleset.cs" />
-    <Compile Include="Enums\SampleSet.cs" />
-    <Compile Include="Enums\Sections.cs" />
-    <Compile Include="Enums\StoryboardLayer.cs" />
-    <Compile Include="Enums\TaikoColor.cs" />
-    <Compile Include="Enums\TimeSignature.cs" />
-    <Compile Include="Helpers\ParseHelper.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Beatmaps\Sections\DifficultySection.cs" />
-    <Compile Include="Beatmaps\Sections\EditorSection.cs" />
-    <Compile Include="Beatmaps\Sections\EventsSection.cs" />
-    <Compile Include="Beatmaps\Sections\Events\BreakEvent.cs" />
-    <Compile Include="Beatmaps\Sections\GeneralSection.cs" />
-    <Compile Include="Beatmaps\Sections\MetadataSection.cs" />
-    <Compile Include="Serialization\SerializationWriter.cs" />
-    <Compile Include="Storyboards\Commands\Command.cs" />
-    <Compile Include="Storyboards\Commands\CommandGroup.cs" />
-    <Compile Include="Storyboards\Commands\LoopCommand.cs" />
-    <Compile Include="Storyboards\Commands\TriggerCommand.cs" />
-    <Compile Include="Storyboards\Interfaces\ICommand.cs" />
-    <Compile Include="Storyboards\Interfaces\IHasCommands.cs" />
-    <Compile Include="Storyboards\Interfaces\IStoryboardObject.cs" />
-    <Compile Include="Storyboards\Objects\StoryboardAnimation.cs" />
-    <Compile Include="Storyboards\Objects\StoryboardSample.cs" />
-    <Compile Include="Storyboards\Objects\StoryboardSprite.cs" />
-    <Compile Include="Storyboards\Storyboard.cs" />
-    <Compile Include="Writers\BeatmapWriter.cs" />
-    <Compile Include="Writers\DatabaseWriter.cs" />
-    <Compile Include="Writers\ReplayWriter.cs" />
-    <Compile Include="Writers\StoryboardWriter.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
