--- a/OsuParsers/OsuParsers.csproj
+++ b/OsuParsers/OsuParsers.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net45;net461;netstandard2.0</TargetFrameworks>
-    <Version>1.5.2</Version>
+    <TargetFrameworks>net45;netstandard2.0;netcoreapp2.2</TargetFrameworks>
+    <RootNamespace>OsuParsers</RootNamespace>
     <Authors>mrflashstudio</Authors>
-    <Description>Library for parsing/writing files associated with osu!</Description>
-    <Copyright>Copyright 2019</Copyright>
-    <AssemblyVersion>1.5.2.0</AssemblyVersion>
-    <FileVersion>1.5.2.0</FileVersion>
     <Company />
+    <Version>1.6.0</Version>
+    <Description>Library for parsing/writing files associated with osu!</Description>
+    <Copyright></Copyright>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
