Add tests for skins

--- a/OsuParsers.Tests/OsuParsers.Tests.csproj
+++ b/OsuParsers.Tests/OsuParsers.Tests.csproj
@@ -7,6 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Skins\AngelsimSkin.ini" />
+    <None Remove="Resources\Skins\BeasttrollMCSkin.ini" />
+    <None Remove="Resources\Skins\CookieziSkin.ini" />
+    <None Remove="Resources\Skins\DokidokilolixxSkin.ini" />
+    <None Remove="Resources\Skins\InformousSkin.ini" />
+    <None Remove="Resources\Skins\MathiTunaSkin.ini" />
+    <None Remove="Resources\Skins\RafisSkin.ini" />
+    <None Remove="Resources\Skins\VarvalianSkin.ini" />
+    <None Remove="Resources\Skins\VaxeiSkin.ini" />
+    <None Remove="Resources\Skins\YugenSkin.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Skins\AngelsimSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\BeasttrollMCSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\CookieziSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\DokidokilolixxSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\InformousSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\MathiTunaSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\RafisSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\VarvalianSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\VaxeiSkin.ini" />
+    <EmbeddedResource Include="Resources\Skins\YugenSkin.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
