--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+.idea/.idea.OsuParsers/.idea/
+
+.idea/.idea.OsuParsers/riderModule.iml
